--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "rmc-picker",
-  "version": "5.0.10",
-  "description": "React Mobile Picker Component(web and react-native)",
+  "name": "rmc-picker-scroll",
+  "version": "5.0.5",
+  "description": "React Mobile Picker Component(web and react-native), fork from rmc-picker, add scroll visible effect and can click to scroll",
   "keywords": [
     "react",
     "react-component",
     "react-m-picker",
-    "m-picker"
+    "m-picker",
+    "rmc-picker-scroll"
   ],
   "homepage": "https://github.com/react-component/m-picker",
   "repository": {
@@ -43,54 +44,35 @@
     "prepublishOnly": "rc-tools run guard",
     "pub": "rc-tools run pub --babel-runtime",
     "lint": "rc-tools run lint --no-js-lint",
-    "test": "jest",
-    "coverage": "npm run test -- --coverage",
+    "karma": "rc-test run karma",
+    "saucelabs": "rc-test run saucelabs",
+    "test": "rc-test run test",
+    "chrome-test": "rc-test run chrome-test",
+    "coverage": "rc-test run coverage",
     "rn-start": "node node_modules/react-native/local-cli/cli.js start",
-    "rn-init": "rc-tools run react-native-init",
-    "tsc": "tsc -d"
-  },
-  "jest": {
-    "setupFiles": [
-      "./tests/setup.js"
-    ],
-    "testMatch": [
-      "**/?(*.)(spec|test).ts?(x)"
-    ],
-    "coverageDirectory": "./coverage/",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*"
-    ],
-    "transform": {
-      "\\.tsx?$": "./node_modules/rc-tools/scripts/jestPreprocessor.js",
-      "\\.jsx?$": "./node_modules/rc-tools/scripts/jestPreprocessor.js"
-    }
+    "rn-init": "rc-tools run react-native-init"
   },
   "dependencies": {
     "babel-runtime": "6.x",
-    "classnames": "^2.2.6",
+    "classnames": "^2.2.0",
     "rmc-feedback": "^2.0.0",
-    "rmc-dialog": "^1.1.1"
+    "rmc-dialog": "^1.0.1"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.7",
-    "@types/enzyme": "^3.9.1",
-    "@types/react": "^15.0.0",
-    "@types/react-dom": "^15.0.0",
-    "@types/react-native": "^0.57.42",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.11.2",
-    "jest": "^24.5.0",
+    "@types/mocha": "~2.2.32",
+    "@types/react": "^15.5.1",
+    "@types/react-dom": "^15.5.1",
+    "@types/react-native": "^0.46.9",
+    "array-tree-filter": "1.x",
+    "expect.js": "0.3.x",
+    "fastclick": "^1.0.6",
     "pre-commit": "1.x",
-    "rc-tools": "9.x",
-    "react": "16.x",
-    "react-dom": "16.x",
-    "react-native": "~0.59.3",
-    "react-native-index-page": "~2.0.0"
+    "rc-test": "6.x",
+    "rc-tools": "6.x",
+    "react": "15.5.x",
+    "react-dom": "15.5.x",
+    "react-native": "~0.42.0",
+    "react-native-index-page": "~0.2.1"
   },
   "typings": "./lib/index.d.ts",
   "pre-commit": [
