--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "rmc-picker",
+  "name": "rmc-picker-scroll",
   "version": "5.0.5",
-  "description": "React Mobile Picker Component(web and react-native)",
+  "description": "React Mobile Picker Component(web and react-native), fork from rmc-picker, add scroll visible effect and can click to scroll",
   "keywords": [
     "react",
     "react-component",
     "react-m-picker",
-    "m-picker"
+    "m-picker",
+    "rmc-picker-scroll"
   ],
-  "homepage": "https://github.com/react-component/m-picker",
+  "homepage": "https://github.com/cccRaim/m-picker",
   "repository": {
     "type": "git",
-    "url": "https://github.com/react-component/m-picker.git"
+    "url": "https://github.com/cccRaim/m-picker"
   },
   "bugs": {
-    "url": "https://github.com/react-component/m-picker/issues"
+    "url": "https://github.com/cccRaim/m-picker/issues"
   },
   "files": [
     "lib",
